--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^4.0.0",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "paginate": "^0.2.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
