--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DB_NAME=CyberGame
-DB_USER= postgres
-DB_PASSWORD = 123456
+DB_USER= nana
+DB_PASSWORD = 2403
 DB_HOST = 127.0.0.1
 DB_PORT = 5432
 
